deleted one part

--- a/style.css
+++ b/style.css
@@ -178,13 +178,27 @@ h2 {
   text-align: center;
   width: 60%;
   margin: 0 auto;
-  background: white;                         /* White background */
+  background: #1ec7e6;                         /* White background */
   padding: 30px;                             /* Internal space */
-  border-radius: 4px;                        /* Small radius */
+  border-radius: 40px 0px 40px 0px;                        /* Small radius */
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
   margin-bottom: 10px;
   transition: 0.2s;
 }
+.container {
+  text-align: center;
+  padding: .8em 1.2em 2em;
+  background-color: #1ec7e6;
+  text-align: center;
+  width: 60%;
+  margin: 0 auto;
+  padding: 30px;                             /* Internal space */
+  border-radius: 40px 0px 40px 0px;                        /* Small radius */
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  margin-bottom: 10px;
+  transition: 0.2s;
+}
+
 
 ul {
   list-style: none;
