--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ h2 {
 .container {
   text-align: center;
   padding: .8em 1.2em 2em;
-  background-color: #1ec7e6;
+  background-color: #d2d3b0;
   text-align: center;
   width: 60%;
   margin: 0 auto;
