--- a/style.css
+++ b/style.css
@@ -202,9 +202,9 @@ h2 {
   font-family: sans-serif;
   letter-spacing: 4px;
   background-color: #14bba5;
-  padding: auto;
+  padding: 0;
   margin-top: 10px;
-  border-radius: 4px 0 4px 0;
+  border-radius: 15px;
   box-shadow: inset 0 0 0 0 #f9e506;
   transition: ease-out 0.3s;
   font-size: small;
